@@ -66,18 +66,23 @@ cdnboxMetrics.getvarnishmetrics = function(cdnboxStates) {
           var delta = (currenttime - (cdnboxStates.varnishmetrics.lasttime?cdnboxStates.varnishmetrics.lasttime:0)) / 1000;
           cdnboxStates.varnishmetrics.lasttime = currenttime;
           for (i = 0; i < vconf_keys.length; i++) {
-            if (vstat[vconf[vconf_keys[i]]]) {
-              switch (vstat[vconf[vconf_keys[i]]].flag) {
+            var vname = vconf[vconf_keys[i]].vname?vconf[vconf_keys[i]].vname:vconf[vconf_keys[i]];
+            if (vstat[vname]) {
+              switch (vstat[vname].flag) {
                 case 'c':
-                  if (cdnboxStates.varnishmetrics[vconf_keys[i]] !== undefined &&
-		      cdnboxStates.varnishmetrics[vconf_keys[i]] <= vstat[vconf[vconf_keys[i]]].value) {
-                    buff += ',"' + vconf_keys[i] + '": ' +
-                        Math.round((vstat[vconf[vconf_keys[i]]].value - cdnboxStates.varnishmetrics[vconf_keys[i]]) / delta); 
+	          if (vconf[vconf_keys[i]].dontderive) {
+		    buff += ',"' + vconf_keys[i] + '": ' + vstat[vname].value;
+		  } else {
+                    if (cdnboxStates.varnishmetrics[vconf_keys[i]] !== undefined &&
+		        cdnboxStates.varnishmetrics[vconf_keys[i]] <= vstat[vname].value) {
+                      buff += ',"' + vconf_keys[i] + '": ' +
+                          Math.round((vstat[vname].value - cdnboxStates.varnishmetrics[vconf_keys[i]]) / delta); 
+		    }
                   }
-                  cdnboxStates.varnishmetrics[vconf_keys[i]] = vstat[vconf[vconf_keys[i]]].value;
+                  cdnboxStates.varnishmetrics[vconf_keys[i]] = vstat[vname].value;
                   break;
                 case 'g':
-                  buff += ',"' + vconf_keys[i] + '": ' + vstat[vconf[vconf_keys[i]]].value; 
+                  buff += ',"' + vconf_keys[i] + '": ' + vstat[vname].value; 
               }
             } else {
               buff += ',"' + vconf_keys[i] + '": -1';
